2011-11-16 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinymailbox.el (tinymailbox--header-begin-regexp):
	Rename from `tinymailbox:-header-begin-regexp'.

	* tiny/tinypath.el (tinypath-cache-display): Correct docstring
	variable name `tinypath--cache'.

	* tiny/tinyurl.el (tinyurl-dispatcher-1): correct message to
	announce `tinyurl--validate-hook"'.

2011-09-20 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-string):
	Add Debian bug URL detection. Tighten plain number regexp not
	to match YYYY-MM-DD

2011-06-23 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-mark-region): Add missing paren.

2011-04-30 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-bug-p):
	Add missing paren.
	(tinydebian-bts-generic-bug-subject): New. Support Emacs BTS.
	(tinydebian-bts-mail-type-reply): Use `tinydebian-bts-generic-bug-subject'.
	(tinydebian-debian-url-bug-initialize-p): Add BTS parameter.
	(tinydebian-debian-url-bug-info): Add BTS parameter.
	(tinydebian-debian-url-bug-initialize): Add BTS parameter. Add Emacs BTS
	support.
	(tinydebian-debian-bug-info-message-all-macro): Add BTS parameter.
	(tinydebian-debian-bug-info-macro): Add BTS parameter.
	(tinydebian-debian-bug-info-all-insert): Add BTS parameter.
	(tinydebian-bts-mail-ctrl-retitle): Add BTS parameter.
	(tinydebian-bts-mail-type-reply): Add BTS parameter.
	(tinydebian-bts-mail-type-it-nmu): Add BTS parameter.
	(tinydebian-bts-mail-type-ita): Add BTS parameter.
	(tinydebian-debian-bug-info-subject-message): Add BTS parameter.
	(tinydebian-debian-bug-info-subject-insert): Add BTS parameter.
	(tinydebian-bts-mail-type-reply): Always consult URL for the subject.

2011-04-21 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-bug-p):
	New.
	(tinydebian-mail-mode-debian-address-bug-toggle): Improve interactive
	use. Use bug number found from current line.
