@@ -1,3 +1,8 @@
+2011-11-18 Fri  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinyreplace.el (tinyreplace-define-keys-local-map): Rename
+	from `tinyreplace-define-keys-compile-map'.
+
 2011-11-16 Wed  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinymailbox.el (tinymailbox--header-begin-regexp):
